# inventory_poc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.json
client/: InventoryClient.slnx
client/InventoryClient.ContractTests/: InventoryClient.ContractTests.csproj  (+3 more)
docs/: architecture.md  autonomy-harness.md  claude-code-settings-scope.md  data-model.md  harness-reuse.md  harness-template-design.md  library-choices.md  loop-experiment-findings.md  testing-strategy.md  ui-testing-comparison.md  workflow.md
issues/: 0001-ship-stock-invariant.md  0002-product-register-list-api.md  0003-wpf-product-list.md  0004-wpf-ui-binding-tests.md  0005-doc-ui-testing-comparison.md  0006-receive-ship-api-ui.md  0007-sqlite-persistence.md  0008-autonomy-harness.md  0009-doc-settings-scope.md  0010-doc-genericize-paths.md  0011-memory-policy.md  0012-memory-snapshot-script.md  0013-contract-tests.md  0014-purchase-order-flow-server.md  0015-purchase-order-ui.md  0016-loading-indicator-and-localhost.md  0017-auto-load-on-tab.md  0018-get-single-product.md  0019-inventory-summary.md  0020-rename-product.md  0021-delete-product.md  0022-cancel-purchase-order.md  0023-low-stock-alert.md  0024-loop-findings-doc.md  0025-get-single-order.md  0026-improve-order-list.md  0027-library-choices-doc.md  0028-doc-generation-notes.md  0029-document.md  0030-doc-harness.md
scripts/: check.ps1  stop-check.ps1
server/: pyproject.toml
server/app/: domain.py  main.py  repository.py
server/tests/: test_api.py  test_domain.py  test_purchase_orders.py  test_repository.py
(+20 files in other folders)
